--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-ansiparser",
-  "version": "1.0.2",
+  "version": "2.0.0-beta",
   "description": "A parser for ANSI escape codes.",
   "main": "dist/ansiparser.js",
   "keywords": [
@@ -15,10 +15,10 @@
     "url": "https://github.com/netzkolchose/node-ansiparser.git"
   },
   "devDependencies": {
-    "closurecompiler": "latest"
+    "uglify-js": "2.4.24"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "minify": "ccjs ./dist/ansiparser.js --compilation_level=ADVANCED_OPTIMIZATIONS --language_in=ECMASCRIPT5_STRICT > ./dist/ansiparser.min.js"
+    "minify": "node_modules/uglify-js/bin/uglifyjs --compress --mangle -- dist/ansiparser.js > dist/ansiparser.min.js"
   }
 }
