--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,16 @@
 language: node_js
 node_js:
+  - "5"
+  - "4"
   - "0.12"
-  - "0.11"
-  - "0.10"
   - "iojs"
-  - "iojs-v1.0.4"
+env:
+  - CXX=g++-4.8
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - g++-4.8
+script: npm run coverage
 after_success: 'npm run coveralls'
