--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-ansiparser",
-  "version": "2.1.0",
+  "version": "2.2.0",
   "description": "A parser for ANSI escape codes.",
   "main": "dist/ansiparser.js",
   "keywords": [
@@ -16,11 +16,11 @@
     "url": "https://github.com/netzkolchose/node-ansiparser.git"
   },
   "devDependencies": {
-    "uglify-js": "2.4.24",
-    "mocha": "2.2.5",
-    "chai": "3.2.0",
-    "istanbul": "0.3.17",
-    "coveralls": "2.11.3"
+    "chai": "^3.5.0",
+    "coveralls": "^2.11.9",
+    "istanbul": "^0.4.4",
+    "mocha": "^2.5.3",
+    "uglify-js": "^2.7.0"
   },
   "scripts": {
     "minify": "node_modules/uglify-js/bin/uglifyjs --compress --mangle -- dist/ansiparser.js > dist/ansiparser.min.js",
